mensagem teporária para o site

--- a/anaclaraerafael.html
+++ b/anaclaraerafael.html
@@ -1,10 +1,38 @@
-<html>
+<!doctype html>
+<html lang="pt-BR">
 <head>
-	<title>Ana</title>
-</head>
-<body>
+	<meta charset="UTF-8">
+	<title>Ana Clara & Rafael</title>
+	<link rel="shortcut icon" href="img/favicon.ico" />
 
-	<h1>Olá, Ana!!</h1>
+<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
+
+
+</head>
+
+<body>
+	
+	<div class="contentMain shadowBottom" style="width: 85%;">
+		<div id="inicio" class="sectionContent" style="    padding-bottom: 100px;">
+			<div class="textContent">
+
+				<h1>Ana Clara & Rafael</h1>
+
+				<p>Informações a partir de 5 de setembro</p>
+			</div>
+			<img src="img/gg.png" class="gg">
+		</div>
+
+		
+	</div>
+
+<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+<script type="text/javascript" src="js/action.js"></script>
+
 
 </body>
+
 </html>
