index.html sem hello world

--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
-<html>
+<!doctype html>
+<html lang="pt-BR">
 <head>
-	<title>Ana Clara e Gatti</title>
+	<meta charset="UTF-8">
+	<title>EsseDois</title>
+	<link rel="shortcut icon" href="img/favicon.ico" />
+
+
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
+
+
 </head>
+
 <body>
-<h1>Olá, mundo!</h1>
+	
+	<div class="contentMain shadowBottom" style="width: 85%;">
+
+		
+	</div>
+
+
+
 </body>
+
 </html>
