--- a/anaclaraerafael_true.html
+++ b/anaclaraerafael_true.html
@@ -40,6 +40,7 @@
 
 		<div id="festa" class="sectionContent">
 			<h2>A festa</h2>
+			<img class="imgContent" src="img/01-monte-serrat.png">
 			<div class="textContent">
 				<p>A cerimônia de casamento e a festa ocorrerão no mesmo local, o Monte Serrat, que fica no centro de Santos e tem fácil acesso pela chegada de São Paulo. <a href="https://www.google.com.br/maps/place/Pra%C3%A7a+Corr%C3%AAa+de+Melo,+33+-+Centro,+Santos+-+SP/@-23.937342,-46.3277524,17z/data=!4m2!3m1!1s0x94ce037e7a7b8e57:0x42e9579da6802df" target="_BLANK">Acesse o mapa</a>.</p>
  
@@ -51,6 +52,7 @@
 
 		<div id="montserrat" class="sectionContent">
 			<h2>O Mont Serrat</h2>
+			<img class="imgContent" src="img/02-bondinho.png">
 			<div class="textContent">
 				<p>O Monte Serrat é um ponto turístico de Santos, construído em 1927 para funcionar como cassino e local de entretenimento. Da construção no alto do morro têm-se uma das <b>vistas mais bonitas da Baixada Santista</b>, podendo-se apreciar as praias de Santos, o porto, a Ilha de Santo Amaro (Guarujá).</p>
 
@@ -88,18 +90,20 @@
 
 		<div id="confirmarpresenca" class="sectionContent">
 			<h2>Confirmar presença</h2>
+			<img class="imgContent" src="img/03-rsvp.png">
 			<div class="textContent">
 				<p>Pedimos a gentileza de confirmar sua presença com a assessora Roselane Rocha até o dia <b>21 de setembro</b> por meio de:
 
-<p><a href="http://roselanerocha.com.br/entre-em-contato" target="_BLANK">roselanerocha.com.br/entre-em-contato</a><br />
-contato@roselanerocha.com.br<br />
-+55 13 3236 7498
-</p>
+				<p><a href="http://roselanerocha.com.br/entre-em-contato" target="_BLANK">roselanerocha.com.br/entre-em-contato</a><br />
+				contato@roselanerocha.com.br<br />
+				+55 13 3236 7498
+				</p>
 				
 			</div>
 		</div>
 		<div id="hospedagem" class="sectionContent">
 			<h2>Hospedagem</h2>
+			<img class="imgContent" src="img/04-hospedagem-1.png">
 			<div class="textContent">
 				<p>A Baixada Santista é uma região acostumada a acolher turistas, havendo diversas opções para hospedagem. Ainda que as cidades sejam próximas, indicamos a estadia em Santos, que conta com a melhor infra-estrutura de serviços e mais opções de lazer.</p>
 
@@ -108,7 +112,11 @@ contato@roselanerocha.com.br<br />
 				<p>Relembramos que segunda-feira é feriado internacional!</p>
 
 				<p>A voltagem em Santos é 220V, por isso, cuidado com secadores de cabelo!</p>
+			</div>
 
+			<img class="imgContent" src="img/05-hospedagem-2.png">
+
+			<div class="textContent">
 				<p>Você pode optar por ficar em Hotéis, pousadas  e flats:<br />
 				<a href="http://www.accorhotels.com/pt-br/hotel-6314-mercure-santos-hotel/index.shtml" target="_blank">Mercure</a><br />
 				<a href="http://www.accorhotels.com/pt-br/hotel-5530-ibis-santos/index.shtml" target="_blank">Ibis</a><br />
@@ -157,7 +165,7 @@ contato@roselanerocha.com.br<br />
 					<p><b>Onde?</b><br />
 					Ponte Edgar Perdigão, Av. Almirante Saldanha da Gama, em frente ao clube Saldanha. Próximo ao canal 7. <a href="http://www.bravotur.com.br/passeiodeescuna.html">Informações</a>.
 					</p>
-					<p><b>Quanto?</b>
+					<p><b>Quanto?</b><br />
 					R$ 30,00; R$ 15,00 até 10 anos.
 					</p>
 				</div>
@@ -168,7 +176,7 @@ contato@roselanerocha.com.br<br />
 					<p><b>Onde?</b><br />
 					Pico da Asa Delta, acesso pela praia do Irararé. <a href="http://www.windcoast.esp.br/">Informações</a>.
 					</p>
-					<p><b>Quanto?</b>
+					<p><b>Quanto?</b><br />
 					R$ 200,00 por pessoa.
 					</p>
 				</div>
@@ -179,7 +187,7 @@ contato@roselanerocha.com.br<br />
 					<p><b>Onde?</b><br />
 					Avenida Manoel da Nóbrega, Praia do Itararé. <a href="http://www.telefericosaovicente.com.br/">Informações</a>.
 					</p>
-					<p><b>Quanto?</b>
+					<p><b>Quanto?</b><br />
 					R$ 30,00; R$ 15,00 acima de 60 anos; grátis para menos de 8 anos.
 					</p>
 				</div>
@@ -190,7 +198,7 @@ contato@roselanerocha.com.br<br />
 					<p><b>Onde?</b><br />
 					Avenida Saldanha da Gama, 192. Das 10h às 18h. <a href="http://www.pesca.sp.gov.br/museu.php">Informações</a>.
 					</p>
-					<p><b>Quanto?</b>
+					<p><b>Quanto?</b><br />
 					R$ 5,00; R$2,50 meia.
 					</p>
 				</div>	
@@ -201,10 +209,75 @@ contato@roselanerocha.com.br<br />
 					<p><b>Onde?</b><br />
 					Avenida Bartolomeu de Gusmão, próximo do canal 6. <a href="http://www.vivasantos.com.br/aquario/info/main.htm">Informações</a>.
 					</p>
-					<p><b>Quanto?</b>
+					<p><b>Quanto?</b><br />
 					R$ 5,00. Grátis para menores de 12 e maiores de 60 anos.
 					</p>
+				</div>
+
+				<div class="atracao">
+					<img src="img/santos/06-bondinho.png">
+					<p><b>Bondinho do Centro Histórico</b></p>
+					<p><b>Onde?</b><br />
+					Praça Mauá, centro. Das 11h às 17h. <a href="http://www.turismosantos.com.br/ptb/guia-de-santos/locais/ir/atracoes-em-santos/centro-historico/linha-turistica-de-bonde">Informações</a>.
+					</p>
+					<p><b>Quanto?</b><br />
+					R$ 6,00 por pessoa. Grátis para menores de 5. Meia acima de 60.
+					</p>
 				</div>	
+
+				<div class="atracao">
+					<img src="img/santos/07-praias.png">
+					<p><b>Praias</b></p>
+					<p><b>Onde?</b><br />
+					Em toda orla!
+					</p>
+					<p><b>Quanto?</b><br />
+					Esse é grátis! Mas o pastel e a caipirinha são pagos…
+					</p>
+				</div>	
+
+				<div class="atracao">
+					<img src="img/santos/08-cicivia-da-orla.png">
+					<p><b>Andar de bike na orla</b></p>
+					<p><b>Onde?</b><br />
+					Todos os canais, pelo sistema BikeSantos. <a href="http://www.mobilicidade.com.br/bikesantos/">Informações</a>.
+					</p>
+					<p><b>Quanto?</b><br />
+					Grátis. Mas tem que cadastrar.
+					</p>
+				</div>	
+
+				<div class="atracao">
+					<img src="img/santos/09-cinearte.png">
+					<p><b>Cinearte Posto 4</b></p>
+					<p>Um filme por semana, 3 sessões por dia. Mini sala com 48 lugares.</p>
+					<p><b>Onde?</b><br />
+					Canal 3, em frente ao mar. <a href="http://www.cinearteposto4.com.br/">Informações</a>.
+					</p>
+					<p><b>Quanto?</b><br />
+					R$ 3,00 inteira.
+					</p>
+				</div>	
+
+				<div class="atracao">
+					<img src="img/santos/10-quiosques.png">
+					<p><b>Quiosques e playgrounds nos canais</b></p>
+					<p><b>Onde?</b><br />
+					Na orla, em todos os canais. Lanches, panquecas, água de côco. Com playground e areia da praia para os pequenos!
+					</p>
+				</div>	
+
+				<div class="atracao">
+					<img src="img/santos/11-terraco.png">
+					<p><b>Restaurante Terraço</b></p>
+					<p><b>Onde?</b><br />
+					Alameda Ari Barroso n° 274. Ilha Porchat. <a href="http://www.terracochopp.com.br/datafiles/capa/capa.htm ">Informações</a>.
+					</p>
+					<p><b>Quanto?</b><br />
+					Valores no site, avisamos que é bem servido!</p>
+				</div>
+
+				<div class="atracao"></div>
 
 			</div>
 
@@ -219,10 +292,22 @@ contato@roselanerocha.com.br<br />
 			<div id="presentes" class="sectionContent presentContentAction">
 				<h2>Presentes</h2>
 				<div class="textContent">
-					<p>Sua presença é o nosso melhor presente.<br />Para quem quiser oferecer algo mais, aqui estão algumas sugestões.<br />
-					</p>
+					<p>Muitas famílias tem por tradição presentear os noivos com itens para o lar. Felizmente já temos nossa casa completa! Caso queira, ajude-nos a realizar uma lua-de-mel inesquecível!</p>
+
+
+					<p>Você pode fazer um depósito identificado em nossa conta:</p>
+
+					<p>Rafael Barreto Gatti<br />
+					CPF. 343.155.628-07<br />
+					Banco do Brasil<br />
+					Agência: 6816-0<br />
+					Conta: 6297-9</p>
+
+					<p>Abaixo, deixamos algumas sugestões de contribuições para nossa viagem:</p>
 				</div>
-				<div class="galeriaFotos">
+
+				
+				<!-- <div class="galeriaFotos">
 				<div class="galeriaFotosEach">
 					<a href="" class="openLayer">
 					<img src="img/presentes/14.jpg">
@@ -341,7 +426,7 @@ contato@roselanerocha.com.br<br />
 					<a href="" class="button voltarAction">ok</a>
 
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 
