mensagem aos noivos

--- a/anaclaraerafael_true.html
+++ b/anaclaraerafael_true.html
@@ -17,7 +17,7 @@
 	<div class="allWidth shadowBottom" id="menuTop">
 		<nav class="navMain">
 			<a href="#festa" class="navMainActive">Festa</a>
-			<a href="#montserrat">Mont Serrat</a>
+			<a href="#montserrat">Monte Serrat</a>
 			<a href="#estacionamento">Estacionamento</a>
 			<a href="#confirmarpresenca">Confirmar presença</a>
 			<a href="#hospedagem">Hospedagem</a>
@@ -34,7 +34,7 @@
 
 				<h1>Ana Clara & Rafael</h1>
 
-				<p>Juntamente com seus pais convidam para a cerimônia do seu casamento que será realizada às dezenove horas e trinta minutos do dia 31 de outubro de 2015 no Monte Serrat, na Praça Correia de Mello, 33 Santos –SP – Brasil</p>
+				<p>Juntamente com seus pais convidam para a cerimônia do seu casamento que será realizada às dezenove horas e trinta minutos do dia 31 de outubro de 2015 no Monte Serrat, na Praça Correia de Mello, 33 Santos –SP – Brasil.</p>
 			</div>
 		</div>
 
@@ -51,7 +51,7 @@
 		</div>
 
 		<div id="montserrat" class="sectionContent">
-			<h2>O Mont Serrat</h2>
+			<h2>O Monte Serrat</h2>
 			<img class="imgContent" src="img/02-bondinho.png">
 			<div class="textContent">
 				<p>O Monte Serrat é um ponto turístico de Santos, construído em 1927 para funcionar como cassino e local de entretenimento. Da construção no alto do morro têm-se uma das <b>vistas mais bonitas da Baixada Santista</b>, podendo-se apreciar as praias de Santos, o porto, a Ilha de Santo Amaro (Guarujá).</p>
@@ -152,14 +152,12 @@
 				</p>
 			</div>
 
-			<iframe id="mapa-oquefazeremsantos" src="https://www.google.com/maps/d/embed?mid=zCsTeJFV-6l0.klmswgfzwcL8" height="480"></iframe>
-
 			<div class="oquefazeremsantos">
 				<div class="atracao">
 					<img src="img/santos/01-escuna.png">
 					<p><b>Passeio de Escuna - 1h30min</b></p>
 					<p><b>Onde?</b><br />
-					Ponte Edgar Perdigão, Av. Almirante Saldanha da Gama, em frente ao clube Saldanha. Próximo ao canal 7. <a href="http://www.bravotur.com.br/passeiodeescuna.html">Informações</a>.
+					Ponte Edgar Perdigão, Av. Almirante Saldanha da Gama, em frente ao clube Saldanha. Próximo ao canal 7. <a href="http://www.bravotur.com.br/passeiodeescuna.html" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					R$ 30,00; R$ 15,00 até 10 anos.
@@ -170,7 +168,7 @@
 					<img src="img/santos/02-parapente.png">
 					<p><b>Pular de Parapente!</b></p>
 					<p><b>Onde?</b><br />
-					Pico da Asa Delta, acesso pela praia do Irararé. <a href="http://www.windcoast.esp.br/">Informações</a>.
+					Pico da Asa Delta, acesso pela praia do Irararé. <a href="http://www.windcoast.esp.br/" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					R$ 200,00 por pessoa.
@@ -181,7 +179,7 @@
 					<img src="img/santos/03-teleferico.png">
 					<p><b>Teleférico de São Vicente</b></p>
 					<p><b>Onde?</b><br />
-					Avenida Manoel da Nóbrega, Praia do Itararé. <a href="http://www.telefericosaovicente.com.br/">Informações</a>.
+					Avenida Manoel da Nóbrega, Praia do Itararé. <a href="http://www.telefericosaovicente.com.br/" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					R$ 30,00; R$ 15,00 acima de 60 anos; grátis para menos de 8 anos.
@@ -192,7 +190,7 @@
 					<img src="img/santos/04-museu-de-pesca.png">
 					<p><b>Museu de pesca</b></p>
 					<p><b>Onde?</b><br />
-					Avenida Saldanha da Gama, 192. Das 10h às 18h. <a href="http://www.pesca.sp.gov.br/museu.php">Informações</a>.
+					Avenida Saldanha da Gama, 192. Das 10h às 18h. <a href="http://www.pesca.sp.gov.br/museu.php" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					R$ 5,00; R$2,50 meia.
@@ -203,7 +201,7 @@
 					<img src="img/santos/05-aquario.png">
 					<p><b>Aquário de Santos</b></p>
 					<p><b>Onde?</b><br />
-					Avenida Bartolomeu de Gusmão, próximo do canal 6. <a href="http://www.vivasantos.com.br/aquario/info/main.htm">Informações</a>.
+					Avenida Bartolomeu de Gusmão, próximo do canal 6. <a href="http://www.vivasantos.com.br/aquario/info/main.htm" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					R$ 5,00. Grátis para menores de 12 e maiores de 60 anos.
@@ -214,7 +212,7 @@
 					<img src="img/santos/06-bondinho.png">
 					<p><b>Bondinho do Centro Histórico</b></p>
 					<p><b>Onde?</b><br />
-					Praça Mauá, centro. Das 11h às 17h. <a href="http://www.turismosantos.com.br/ptb/guia-de-santos/locais/ir/atracoes-em-santos/centro-historico/linha-turistica-de-bonde">Informações</a>.
+					Praça Mauá, centro. Das 11h às 17h. <a href="http://www.turismosantos.com.br/ptb/guia-de-santos/locais/ir/atracoes-em-santos/centro-historico/linha-turistica-de-bonde" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					R$ 6,00 por pessoa. Grátis para menores de 5. Meia acima de 60.
@@ -236,7 +234,7 @@
 					<img src="img/santos/08-cicivia-da-orla.png">
 					<p><b>Andar de bike na orla</b></p>
 					<p><b>Onde?</b><br />
-					Todos os canais, pelo sistema BikeSantos. <a href="http://www.mobilicidade.com.br/bikesantos/">Informações</a>.
+					Todos os canais, pelo sistema BikeSantos. <a href="http://www.mobilicidade.com.br/bikesantos/" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					Grátis. Mas tem que cadastrar.
@@ -248,7 +246,7 @@
 					<p><b>Cinearte Posto 4</b></p>
 					<p>Um filme por semana, 3 sessões por dia. Mini sala com 48 lugares.</p>
 					<p><b>Onde?</b><br />
-					Canal 3, em frente ao mar. <a href="http://www.cinearteposto4.com.br/">Informações</a>.
+					Canal 3, em frente ao mar. <a href="http://www.cinearteposto4.com.br/" target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					R$ 3,00 inteira.
@@ -267,7 +265,7 @@
 					<img src="img/santos/11-terraco.png">
 					<p><b>Restaurante Terraço</b></p>
 					<p><b>Onde?</b><br />
-					Alameda Ari Barroso n° 274. Ilha Porchat. <a href="http://www.terracochopp.com.br/datafiles/capa/capa.htm ">Informações</a>.
+					Alameda Ari Barroso n° 274. Ilha Porchat. <a href="http://www.terracochopp.com.br/datafiles/capa/capa.htm " target="_blank">Informações</a>.
 					</p>
 					<p><b>Quanto?</b><br />
 					Valores no site, avisamos que é bem servido!</p>
@@ -276,6 +274,8 @@
 				<div class="atracao"></div>
 
 			</div>
+
+			<iframe id="mapa-oquefazeremsantos" src="https://www.google.com/maps/d/embed?mid=zCsTeJFV-6l0.klmswgfzwcL8" height="480"></iframe>
 
 		</div>
 
@@ -384,17 +384,37 @@
 			<div class="layer">
 				<div class="layerContent">
 					<!-- <a href="" class="voltar_buton voltarAction" title="voltar">X</a> -->
-					<img class="imgLayerDisplay" src="">
-					<div class="layerCaption"><b>Titulo</b><br /><span>preço</span></div>
-					<div class="textContent">
-						Pagamento via transferência bancária:<br />
-						<p><b>Rafael Barreto Gatti</b><br />
-						CPF. 343.155.628-07<br />
-						Banco do Brasil<br />
-						Agência: 6816-0<br />
-						Conta: 6297-9</p>
+					<div id="layerContent-1">
+						<img class="imgLayerDisplay" src="">
+						<div class="layerCaption"><b>Titulo</b><br /><span>preço</span></div>
 					</div>
-					<a href="" class="button voltarAction">ok</a>
+					<div id="layerContent-2" class="hide">
+						<div><b>Envie um cartão aos noivos!</b><br /></div>
+						<form>
+							<input type="text" placeholder="seu nome">
+							<input type="text" placeholder="seu telefone">
+							<input type="text" placeholder="seu e-mail">
+							<input type="text" placeholder="mensagem aos noivos">
+						</form>
+					</div>
+					<div id="layerContent-3" class="hide">
+						<div class="textContent">
+							<p><span>Mensagem enviada aos noivos com sucesso!</span></p><br />
+							<p>Por favor, realize o pagamento via transferência bancária:</p>
+							<p><b>Rafael Barreto Gatti</b><br />
+							CPF. 343.155.628-07<br />
+							Banco do Brasil<br />
+							Agência: 6816-0<br />
+							Conta: 6297-9</p>
+						</div>
+					</div>
+					<div class="layerButtons">
+						<a href="" class="button darEsteAction layerButtons-1">dar este presente</a>
+						<a href="" class="button voltarAction layerButtons-1">escolher outro</a>
+						<a href="" class="button enviarAction layerButtons-2 hide">enviar mensagem</a>
+						<a href="" class="button voltarAction layerButtons-2 hide">cancelar presente</a>
+						<a href="" class="button voltarAction layerButtons-3 hide">ok</a>
+					</div>
 				</div>
 			</div>
 		</div>
