--- a/anaclaraerafael_true.html
+++ b/anaclaraerafael_true.html
@@ -296,7 +296,7 @@
 				<p>Você pode fazer um depósito identificado em nossa conta:</p>
 
 				<p><b>Rafael Barreto Gatti</b><br />
-				CPF. 343.155.628-07<br />
+				CPF: 343.155.628-07<br />
 				Banco do Brasil<br />
 				Agência: 6816-0<br />
 				Conta: 6297-9</p>
@@ -402,7 +402,7 @@
 							<p><span>Mensagem enviada aos noivos com sucesso!</span></p><br />
 							<p>Por favor, realize o pagamento via transferência bancária:</p>
 							<p><b>Rafael Barreto Gatti</b><br />
-							CPF. 343.155.628-07<br />
+							CPF: 343.155.628-07<br />
 							Banco do Brasil<br />
 							Agência: 6816-0<br />
 							Conta: 6297-9</p>
