--- a/anaclaraerafael_true.html
+++ b/anaclaraerafael_true.html
@@ -414,7 +414,7 @@
 							<input type="hidden" name="presente" id="presenteInputContent">
 							<input type="hidden" name="preco" id="precoInputContent">
 
-							<input type="hidden" name="_next" value="//confirmacao.html" />
+							<input type="hidden" name="_next" value="confirmacao.html" />
 							<input type="hidden" name="_subject" value="Nova mensagem aos noivos!" />
 							<input type="hidden" name="_cc" value="lucianaheuko@gmail.com" />
 
