--- a/anaclaraerafael_true.html
+++ b/anaclaraerafael_true.html
@@ -393,7 +393,7 @@
 						
 
 
-						<form action="http://formspree.io/luciana.heuko@fabricadeaplicativos.com.br" method="post" id="form-presentes">
+						<form action="http://formspree.io/a.clara.viola@gmail.com" method="post" id="form-presentes">
 							<div>
 								Seu nome:
 								<input type="text" name="nome">
@@ -416,7 +416,7 @@
 
 							<input type="hidden" name="_next" value="http://www.essedois.com.br/confirmacao.html" />
 							<input type="hidden" name="_subject" value="Nova mensagem aos noivos!" />
-							<input type="hidden" name="_cc" value="lucianaheuko@gmail.com" />
+							<input type="hidden" name="_cc" value="barretogatti@gmail.com" />
 
 							<input type="submit" class="button" value="enviar mensagem">
 						</form>
