e-mails corretos + style

--- a/anaclaraerafael_true.html
+++ b/anaclaraerafael_true.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="allWidth shadowBottom" id="menuTop">
 		<nav class="navMain">
-			<a href="#festa" class="navMainActive">Festa</a>
+			<a href="#festa">Festa</a>
 			<a href="#montserrat">Monte Serrat</a>
 			<a href="#estacionamento">Estacionamento</a>
 			<a href="#confirmarpresenca">Confirmar presença</a>
@@ -292,15 +292,6 @@
 			<div class="textContent">
 				<p>Muitas famílias tem por tradição presentear os noivos com itens para o lar. Felizmente já temos nossa casa completa! Caso queira, ajude-nos a realizar uma lua-de-mel inesquecível!</p>
 
-
-				<p>Você pode fazer um depósito identificado em nossa conta:</p>
-
-				<p><b>Rafael Barreto Gatti</b><br />
-				CPF: 343.155.628-07<br />
-				Banco do Brasil<br />
-				Agência: 6816-0<br />
-				Conta: 6297-9</p>
-
 				<p>Abaixo, deixamos algumas sugestões de contribuições para nossa viagem:</p>
 			</div>
 
@@ -397,19 +388,19 @@
 							<div>
 								Seu nome:
 								<input type="text" name="nome">
-							</div>
+							</div><br />
 							<div>
 								Seu telefone:
 								<input type="text" name="telefone">
-							</div>
+							</div><br />
 							<div>
 								Seu e-mail:
 								<input type="email" name="email">
-							</div>
+							</div><br />
 							<div>
 								Mensagem aos noivos:
 								<textarea name="messagem"></textarea height="80px">
-							</div>
+							</div><br />
 
 							<input type="hidden" name="presente" id="presenteInputContent">
 							<input type="hidden" name="preco" id="precoInputContent">
