e-mails corretos + style

--- a/anaclaraerafael_original.html
+++ b/anaclaraerafael_original.html
@@ -15,19 +15,13 @@
 
 <body>
 	
-	<div class="contentMain shadowBottom" style="width: 60%; min-width: 264px; max-width: 800px; margin:50px auto;">
-		<div id="confirmacao" class="sectionContent" style="    padding-bottom: 50px;">
-			<div class="textContent" style="padding-top: 50px;">
-				<p><span>Mensagem enviada aos noivos com sucesso!</span></p><br />
-				<p>Por favor, realize o pagamento via transferência bancária:</p>
-				<p><b>Rafael Barreto Gatti</b><br />
-				CPF: 343.155.628-07<br />
-				Banco do Brasil<br />
-				Agência: 6816-0<br />
-				Conta: 6297-9</p>
-			</div>
-			<div class="layerButtons">
-				<a href="anaclaraerafael.html" class="button">voltar para o site</a>
+	<div class="contentMain shadowBottom" style="width: 85%;">
+		<div id="inicio" class="sectionContent" style="    padding-bottom: 100px;">
+			<div class="textContent">
+
+				<h1>Ana Clara & Rafael</h1>
+
+				<p>Informações a partir de 5 de setembro</p>
 			</div>
 			<img src="img/gg.png" class="gg">
 		</div>
