e-mails corretos + style

--- a/anaclaraerafael.html
+++ b/anaclaraerafael.html
@@ -25,6 +25,17 @@
 			<a href="#presentes" class="noMargin">Presentes</a>
 		</nav>
 	</div>
+	<div class="allWidth shadowBottom" id="menuTop2">
+		<nav class="navMain">
+			<a href="#festa"> • </a>
+			<a href="#montserrat"> • </a>
+			<a href="#estacionamento"> • </a>
+			<a href="#confirmarpresenca"> • </a>
+			<a href="#hospedagem"> • </a>
+			<a href="#oquefazeremsantos"> • </a>
+			<a href="#presentes" class="noMargin"> • </a>
+		</nav>
+	</div>
 	<div class="contentMain shadowBottom">
 		<div id="inicio" class="sectionContent">
 			<img src="img/gg.png" class="gg">
