tirar a data da confirmação de presenca

--- a/anaclaraerafael.html
+++ b/anaclaraerafael.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Ana Clara & Rafael</title>
 	<link rel="shortcut icon" href="img/favicon.ico" />
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1">
+
 
 <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,300' rel='stylesheet' type='text/css'>
@@ -101,7 +103,7 @@
 			<h2>Confirmar presença</h2>
 			<img class="imgContent" src="img/03-rsvp.png">
 			<div class="textContent">
-				<p>Pedimos a gentileza de confirmar sua presença com a assessora Roselane Rocha até o dia <b>21 de setembro</b> por meio de:
+				<p>Pedimos a gentileza de confirmar sua presença com a assessora Roselane Rocha por meio de:
 
 				<p><a href="http://roselanerocha.com.br/entre-em-contato" target="_BLANK">roselanerocha.com.br/entre-em-contato</a><br />
 				contato@roselanerocha.com.br<br />
