--- a/anaclaraerafael.html
+++ b/anaclaraerafael.html
@@ -79,9 +79,8 @@
 		<div id="estacionamento" class="sectionContent">
 			<h2>Estacionamento</h2>
 			<div class="textContent">
-				<p>No dia da festa os convidados poderão deixar seus veículos em estacionamento privativo, oferecido pelos noivos.</p>
 
-				<p><b>Para aqueles que forem beber...</b>
+				<p><b>Para aqueles que forem beber...</b><br />
 				Sugerimos a utilização do serviço de táxis. Você pode estimar o valor da corrida do seu local de hospedagem até a festa no site <a href="http://www.tarifadetaxi.com/santos" target="_BLANK">Tarifa de taxi</a>.</p>
 
 				<p>Caso precise, Santos conta com estas cooperativas de táxi:</p>
@@ -96,6 +95,7 @@
 
 				<p><a href="http://www.disktaxisantos.com.br/" target="_BLANK">Associação Disk Táxi</a><br />
 				0800 770 0231 | 13 3202 1150</p>
+				
 			</div>
 		</div>
 
